fix: timeline card visibility, remove "plans" card when it's last

--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -14,7 +14,8 @@
     max-height: 30rem;
     z-index: 0;
 
-    transition-property: max-height, opacity, padding-bottom, padding-top;
+    transition-property: max-height, opacity, padding-bottom, padding-top,
+        visibility;
     transition-duration: 200ms;
     transition-timing-function: cubic-bezier(0.65, 0.05, 0.36, 1);
 
@@ -23,10 +24,12 @@
         max-height: 0;
         padding-top: 0;
         padding-bottom: 0;
+        visibility: hidden;
     }
 
     &[data-visible="true"] {
         margin-bottom: 0.5rem;
+        visibility: visible;
         &:last-child {
             margin-bottom: 0;
         }
